--- a/src/pokemon/abomasnow.json
+++ b/src/pokemon/abomasnow.json
@@ -1,83 +1,1 @@
-{
-  "name": "",
-  "image": "",
-  "icon": "",
-  "type": "",
-  "weak": "",
-  "mega": false,
-  "evolves": false,
-  "evolution": "",
-  "trainer": "",
-  "role": "",
-  "base_potential": 0,
-  "stats": {
-    "lvl_1": {
-      "hp": 0,
-      "atk": 0,
-      "sp_a": 0,
-      "def": 0,
-      "sp_d": 0,
-      "sdp": 0,
-      "bulk": 0
-    },
-    "lvl_35": {
-      "hp": 0,
-      "atk": 0,
-      "sp_a": 0,
-      "def": 0,
-      "sp_d": 0,
-      "sdp": 0,
-      "bulk": 0
-    },
-    "lvl_50": {
-      "hp": 0,
-      "atk": 0,
-      "sp_a": 0,
-      "def": 0,
-      "sp_d": 0,
-      "sdp": 0,
-      "bulk": 0
-    },
-    "lvl_65": {
-      "hp": 0,
-      "atk": 0,
-      "sp_a": 0,
-      "def": 0,
-      "sp_d": 0,
-      "sdp": 0,
-      "bulk": 0
-    },
-    "lvl_80": {
-      "hp": 0,
-      "atk": 0,
-      "sp_a": 0,
-      "def": 0,
-      "sp_d": 0,
-      "sdp": 0,
-      "bulk": 0
-    },
-    "lvl_95": {
-      "hp": 0,
-      "atk": 0,
-      "sp_a": 0,
-      "def": 0,
-      "sp_d": 0,
-      "sdp": 0,
-      "bulk": 0
-    },
-    "lvl_100": {
-      "hp": 0,
-      "atk": 0,
-      "sp_a": 0,
-      "def": 0,
-      "sp_d": 0,
-      "sdp": 0,
-      "bulk": 0
-    }
-  },
-  "moves": [],
-  "sync_move": "",
-  "passives": [],
-  "passives_unlock_requirements": [],
-  "tags": []
-}
+{"name":"Abomasnow","type1":"Ice","type2":"","weakness":"Fire","role":"Tech","image":"pm0460_01_yukinooh_256.ktx.png","stats":{"atk":182,"bulk":366,"def":103,"dex":34,"hp":437,"spatk":127,"spdef":105,"spd":192}}
