--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   },
   "homepage": "https://github.com/PokemonMastersDB/gamedatabase#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "chalk": "^2.4.2",
+    "cheerio": "^1.0.0-rc.3",
     "glob": "^7.1.4",
-    "jsonfile": "^5.0.0"
+    "jsonfile": "^5.0.0",
+    "puppeteer": "^1.19.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
